--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,9 +1,4 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <title>About | Ruby on Rails Tutorial Sample App</title>
-  </head>
-  <body>
+<% provide(:title, "About") %>
     <h1>About</h1>
     <p>
       <a href="https://railstutorial.jp/">Ruby on Rails Tutorial</a>
@@ -13,5 +8,4 @@
       <a href="http://rubyonrails.org/">Ruby on Rails</a>.
       This is the sample application for the tutorial.
     </p>
-  </body>
-</html>
+  
