--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -1,9 +1,4 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <title>Help | Ruby on Rails Tutorial Sample App</title>
-  </head>
-  <body>
+<% provide(:title, "Help") %>
     <h1>Help</h1>
     <p>  Get help on the Ruby on Rails Tutorial at the
       <a href="https://railstutorial.jp/help">Rails Tutorial help
@@ -12,5 +7,4 @@
       <a href="https://railstutorial.jp/#ebook">
       <em>Ruby on Rails Tutorial</em> book</a>.
     </p>
-  </body>
-</html>
+  
