--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -87,30 +87,35 @@ p {
   }
 }
 
-    /* footer */
+/* footer */
 
 footer {
   margin-top: 45px;
   padding-top: 5px;
   border-top: 1px solid #eaeaea;
   color: #777;
-  a {
-    color: #555;
-    &:hover {
-      color: #222;
-    }
-  }
-  footer small {
+}
+
+footer a {
+  color: #555;
+}
+
+footer a:hover {
+  color: #222;
+}
+
+footer small {
   float: left;
-  }
-  footer ul {
+}
+
+footer ul {
   float: right;
   list-style: none;
-  li {
+}
+
+footer ul li {
   float: left;
   margin-left: 15px;
-  }
- }
 }
 
 /* sidebar */
