--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -18,17 +18,10 @@
   </div>
 <% else %>
 <div class="center jumbotron">
-  <h1>Welcome to the Sample App</h1>
+  <h1>勤怠システム</h1>
 
-  <h2>
-    This is the home page for the
-    <a href="https://railstutorial.jp/">Ruby on Rails Tutorial</a>
-    sample application.
-  </h2>
-
-  <%= link_to "Sign up now!", signup_path, class: "btn btn-lg btn-primary" %>
+  <%= link_to "ログイン", signup_path, class: "btn btn-lg btn-primary" %>
+  <p>アカウント作成は<%= link_to "こちら", signup_path %>から</p>
 </div>
 
-<%= link_to image_tag("rails.png", alt: "Rails logo"),
-              'http://rubyonrails.org/' %>
 <% end %>
