--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,10 +1,52 @@
 <% provide(:title, 'All users') %>
-<h1>All users</h1>
 
-<%= will_paginate %>
 
 <ul class="users">
-  <%= render @users %>
+  
+  <div id="tbl-bdr">
+  <table width="100%">
+    <tbody><tr>
+      <td class="example1">　月　日 時間管理表</td>
+      <td class="example2">指定勤務時間 0:00</td>
+      <td class="example3", colspan="2">0:00 基本時間</td>
+      <td class="example5"> 初日  /  </td>
+    </tr>
+  
+  <tr>
+    <td class="example1">所属</td>
+    <td class="example2">氏名</td>
+    <td class="example4">コード</td>
+    <td class="example4">出勤日数 ◯日</td>
+    <td class="example5">締め  /  </td>
+  </tr>
+  
+  </tbody></table>
+  </div>
+  
+  <div id="tbl-bdr1">
+  <table width="100%">
+    <tbody><tr>
+      <td class="item1", rowspan="2">日付</td>
+      <td class="item2", rowspan="2">曜日</td>
+      <td class="item3", colspan="3">出社</td>
+      <td class="item7", colspan="3">退社</td>
+      <td class="item11", rowspan="2">在社時間</td>
+      <td class="item12", rowspan="2">備考</td>
+      <td class="item13", rowspan="2">残業指示</td>
+      <td class="item14", rowspan="2">指示者</td>
+    </tr>
+  
+  <tr>
+    <td class="item4">時</td>
+    <td class="item5">分</td>
+    <td class="item6"></td>
+    <td class="item8">時</td>
+    <td class="item9">分</td>
+    <td class="item10"></td>
+  </tr>
+  
+  </tbody></table>
+  </div>  
 </ul>
 
 <%= will_paginate %>
