--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -3,27 +3,32 @@
 
 <ul class="users">
   
+  <% provide(:title, 'All users') %>
+
+
+<ul class="users">
+  
   <div id="tbl-bdr">
   <table width="100%">
     <tbody><tr>
       <td class="example1">　月　日 時間管理表</td>
       <td class="example2">指定勤務時間 0:00</td>
       <td class="example3", colspan="2">0:00 基本時間</td>
-      <td class="example5"> 初日  /  </td>
+      <td class="example4"> 初日  /  </td>
     </tr>
   
   <tr>
-    <td class="example1">所属</td>
-    <td class="example2">氏名</td>
-    <td class="example4">コード</td>
-    <td class="example4">出勤日数 ◯日</td>
-    <td class="example5">締め  /  </td>
+    <td class="example5">所属</td>
+    <td class="example6">氏名</td>
+    <td class="example7">コード</td>
+    <td class="example8">出勤日数 ◯日</td>
+    <td class="example9">締め  /  </td>
   </tr>
   
   </tbody></table>
   </div>
-  
-  <div id="tbl-bdr1">
+ 
+  <div id="tbl-bdr1"> 
   <table width="100%">
     <tbody><tr>
       <td class="item1", rowspan="2">日付</td>
@@ -36,17 +41,93 @@
       <td class="item14", rowspan="2">指示者</td>
     </tr>
   
-  <tr>
-    <td class="item4">時</td>
-    <td class="item5">分</td>
-    <td class="item6"></td>
-    <td class="item8">時</td>
-    <td class="item9">分</td>
-    <td class="item10"></td>
-  </tr>
+    <tr>
+      <td class="item4">時</td>
+      <td class="item5">分</td>
+      <td class="item6"></td>
+      <td class="item8">時</td>
+      <td class="item9">分</td>
+      <td class="item10"></td>
+    </tr>
   
-  </tbody></table>
-  </div>  
+    <tr>
+      <td class="form1"></td>   
+      <td class="form2"></td>
+      <td class="form3"></td>
+      <td class="form4"></td>
+      <td class="form5"></td>
+      <td class="form6"></td>
+      <td class="form7"></td>
+      <td class="form8"></td>
+      <td class="form9"></td>
+      <td class="form10"></td>
+      <td class="form11"></td>
+      <td class="form12"></td>
+    </tr>
+    
+    <tr>
+      <td class="form1"></td>   
+      <td class="form2"></td>
+      <td class="form3"></td>
+      <td class="form4"></td>
+      <td class="form5"></td>
+      <td class="form6"></td>
+      <td class="form7"></td>
+      <td class="form8"></td>
+      <td class="form9"></td>
+      <td class="form10"></td>
+      <td class="form11"></td>
+      <td class="form12"></td>
+    </tr>
+    
+    <tr>
+      <td class="form1"></td>   
+      <td class="form2"></td>
+      <td class="form3"></td>
+      <td class="form4"></td>
+      <td class="form5"></td>
+      <td class="form6"></td>
+      <td class="form7"></td>
+      <td class="form8"></td>
+      <td class="form9"></td>
+      <td class="form10"></td>
+      <td class="form11"></td>
+      <td class="form12"></td>
+    </tr>
+    
+    <tr>
+      <td class="form1"></td>   
+      <td class="form2"></td>
+      <td class="form3"></td>
+      <td class="form4"></td>
+      <td class="form5"></td>
+      <td class="form6"></td>
+      <td class="form7"></td>
+      <td class="form8"></td>
+      <td class="form9"></td>
+      <td class="form10"></td>
+      <td class="form11"></td>
+      <td class="form12"></td>
+    </tr>
+    
+    <tr>
+      <td class="form1"></td>   
+      <td class="form2"></td>
+      <td class="form3"></td>
+      <td class="form4"></td>
+      <td class="form5"></td>
+      <td class="form6"></td>
+      <td class="form7"></td>
+      <td class="form8"></td>
+      <td class="form9"></td>
+      <td class="form10"></td>
+      <td class="form11"></td>
+      <td class="form12"></td>
+    </tr>
+    
+    </table>
+  
 </ul>
 
 <%= will_paginate %>
+
