--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -294,71 +294,226 @@ span.picture {
     border: 0;
   }
 }
-
-/* index.html.erb 勤怠管理表　*/
+   
+  /* index.html.erb 勤怠管理表　*/
 
 .users {
-  
+  padding:0; 
+   
   #tbl-bdr table,#tbl-bdr td,#tbl-bdr th {
     border-collapse: collapse;
     border:1px solid #000000;
-    margin-bottom: 50px;
+    margin-bottom: 70px;
     }
     
    .example1 {
-     padding:10px;
-     width: 500px;
+     height: 50px;
+     width: 300px;
      text-align: center;
+     vertical-align: bottom;
+     padding:5px;
      }
    
    .example2 {
-     padding:10px;
-     width: 30%;
+     height: 50px;
+     width: 170px;
      text-align: center;
+     vertical-align: bottom;
+     padding:5px;
      } 
    
    .example3 {
-     padding:10px;
-     width: 30%px;
+     height: 50px;
+     width: 170px;
      text-align: center;
+     vertical-align: bottom;
+     padding:5px;
      } 
      
     .example4 {
-     padding:10px;
+     height: 50px;
+     width: 80px;
      text-align: center;
+     vertical-align: bottom;
+     padding:5px;
      }  
      
      .example5 {
-     padding:10px;
+     padding:8px;
+     width: 300px;
+     text-align: center;
+     }  
+     
+     .example6 {
+     padding:8px;
+     width: 170px;
+     text-align: center;
+     }  
+     
+     .example7 {
+     padding:8px;
+     width: 50px;
+     text-align: center;
+     }
+     
+     .example8 {
+     padding:8px;
+     width: 120px;
+     text-align: center;
+     }
+     
+     .example9 {
+     padding:8px;
+     width: 80px;
      text-align: center;
      }  
   }
-　
-　#tbl-bdr1 table,#tbl-bdr1 td,#tbl-bdr1 th {
+
+  #tbl-bdr1 table,#tbl-bdr1 td,#tbl-bdr1 th {
     border-collapse: collapse;
     border:1px solid #000000;
     }
-    
+
     .item1 {
      text-align: center;
-     width: 60px;
+     width: 48px;
+     height: 60px;
+     vertical-align: bottom;
+     padding:5px;
     }
     
     .item2 {
      text-align: center;
-     width: 60px;
+     width: 48px;
+     height: 60px;
+     vertical-align: bottom;
+     padding:5px;
     }
 
     .item3 {
+     text-align: center;
+     width: 140px;
+    }
+    
+    .item4 {
+     text-align: center;
+     width: 31px;
+    }
+    
+    .item5 {
+     text-align: center;
+     width: 31px;
+    }
+    
+    .item6 {
      text-align: center;
      width: 70px;
     }
     
     .item7 {
      text-align: center;
-     width: 35px;
+     width: 70px;
     }
     
+    .item8 {
+     text-align: center;
+     width: 31px;
+    }
+    
+    .item9 {
+     text-align: center;
+     width: 31px;
+    }
+    
+    .item10 {
+     text-align: center;
+     width: 10px;
+    }
+    
+    .item11 {
+     text-align: center;
+     width: 70px;
+     height: 60px;
+     vertical-align: bottom;
+     padding:5px;
+    }
+    
+    .item12 {
+     text-align: center;
+     width: 40px;
+     height: 60px;
+     vertical-align: bottom;
+     padding:5px;
+    }
+    
+    .item13 {
+     text-align: center;
+     width: 70px;
+     height: 60px;
+     vertical-align: bottom;
+     padding:5px;
+    }
+    
+    .item14 {
+     text-align: center;
+     width: 150px;
+     height: 60px;
+     vertical-align: bottom;
+     padding:5px;
+    }
+    
+    .form1 {
+      width: 56px;
+      height: 35px;
+    }
+    
+    .form2 {
+      width: 56px;
+    }
+    
+    .form3 {
+      width: 35px;
+    }
+    
+    .form4 {
+      width: 35px;
+    }
+    
+    .form5 {
+      width: 81px;
+    }
+    
+    .form6 {
+      width: 35px;
+    }
+    
+    .form7 {
+      width: 35px;
+    }
+    
+    .form8 {
+      width: 11px;
+    }
+    
+    .form9 {
+      width: 81px;
+    }
+    
+    .form10 {
+      width: 46px;
+    }
+    
+    .form11 {
+      width: 81px;
+    }
+    
+    .form12 {
+      width: 175px;
+    }
+
+  
+
+
 /* 5.1.2
 img {
   display: none;
